--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- navigation -->
     <nav class="pages-nav">
         <div class="pages-nav__item"><a class="link link--page" href="#page-home">Home</a></div>
-        <div class="pages-nav__item"><a class="link link--page" href="#page-docu">About Us</a></div>
-        <div class="pages-nav__item"><a class="link link--page" href="#page-manuals">Products</a></div>
-        <div class="pages-nav__item"><a class="link link--page" href="#page-software">The Store</a></div>
-        <div class="pages-nav__item"><a class="link link--page" href="#page-custom">Where To BUy</a></div>
-        <div class="pages-nav__item"><a class="link link--page" href="#page-training">Contact US</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-buy">EXCLUSIVF</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-blog">SPECIAL</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-contact">ORIGINA</a></div>
+        <div class="pages-nav__item"><a class="link link--page" href="#page-about">About Us</a></div>
+        <div class="pages-nav__item"><a class="link link--page" href="#page-products">Products</a></div>
+        <div class="pages-nav__item"><a class="link link--page" href="#page-store">The Store</a></div>
+        <div class="pages-nav__item"><a class="link link--page" href="#page-where">Where To BUy</a></div>
+        <div class="pages-nav__item"><a class="link link--page" href="#page-contact">Contact US</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-exclusif">EXCLUSIVF</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-special">SPECIAL</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-original">ORIGINAL</a></div>
     </nav>
 
     <!-- /navigation-->
@@ -46,7 +46,7 @@
             <img class="poster" src="images/1.jpg" alt="img01" />
         </div>
         <!-- /page -->
-        <div class="page" id="page-docu">
+        <div class="page" id="page-about">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Documentation</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -56,7 +56,7 @@
             </header>
             <img class="poster" src="images/6.jpg" alt="img06" />
         </div>
-        <div class="page" id="page-manuals">
+        <div class="page" id="page-products">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Manuals</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -66,7 +66,7 @@
             </header>
             <img class="poster" src="images/2.jpg" alt="img02" />
         </div>
-        <div class="page" id="page-software">
+        <div class="page" id="page-store">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Software &amp; Downloads</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -76,7 +76,7 @@
             </header>
             <img class="poster" src="images/3.jpg" alt="img03" />
         </div>
-        <div class="page" id="page-custom">
+        <div class="page" id="page-where">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Customization &amp; Settings</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -86,7 +86,7 @@
             </header>
             <img class="poster" src="images/4.jpg" alt="img04" />
         </div>
-        <div class="page" id="page-training">
+        <div class="page" id="page-contact">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Training &amp; Learning Center</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -96,7 +96,7 @@
             </header>
             <img class="poster" src="images/5.jpg" alt="img05" />
         </div>
-        <div class="page" id="page-buy">
+        <div class="page" id="page-exclusif">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Where to buy</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -106,7 +106,7 @@
             </header>
             <img class="poster" src="images/6.jpg" alt="img06" />
         </div>
-        <div class="page" id="page-blog">
+        <div class="page" id="page-special">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Blog &amp; News</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
@@ -116,7 +116,7 @@
             </header>
             <img class="poster" src="images/1.jpg" alt="img01" />
         </div>
-        <div class="page" id="page-contact">
+        <div class="page" id="page-original">
             <header class="bp-header cf">
                 <h1 class="bp-header__title">Contact</h1>
                 <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
