--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
             <header class="bp-header cf">
 
                 <h1 class="bp-header__title">Cofee DELLAVIE</h1>
-                <img class='logo' src="images/Logo.png" alt="logo" />
                 <p class="info">
                     TM "DELLAVIE" Coffee is a blend of coffee varieties of the highest quality from Colombia, Brazil, Ethiopia, Malaisia and India.
-                    <br>
-
                 </p>
+                <p class="info">The ides is to create an essential atribute of meeting,as one of the most common circumstances in our life, when we enjoy ceoffe.</p>
+
+                <p class="info">A meeting in all its manifestations is a business-meeting, a romtic moment, a meeting of friends, and dawn as a meeting of days and night...All these moments give us hundreds of oportunities to create little miracles for ourselves, our families and friends;this is always the beginning of changes, the begining of something of nes. A meeting always devides time into "befor" and "after"...</p>
+                <img class='logo' src="images/Logo.png" alt="logo" />
+
 
 
             </header>
