--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 
                 <h1 class="bp-header__title">Cofee DELLAVIE</h1>
                 <p class="info">
-                    TM "DELLAVIE" Coffee is a blend of coffee varieties of the highest quality from Colombia, Brazil, Ethiopia, Malaisia and India.
+                    All of our coffees are roasted on site, right in the back of our Pioneer Square café. Amid jute bags of green coffee from the best small-lot farms in the world, you'll find us roasting, cupping and bagging our favorites of the season.
                 </p>
-                <p class="info">The ides is to create an essential atribute of meeting,as one of the most common circumstances in our life, when we enjoy ceoffe.</p>
 
-                <p class="info">A meeting in all its manifestations is a business-meeting, a romtic moment, a meeting of friends, and dawn as a meeting of days and night...All these moments give us hundreds of oportunities to create little miracles for ourselves, our families and friends;this is always the beginning of changes, the begining of something of nes. A meeting always devides time into "befor" and "after"...</p>
+
                 <img class='logo' src="images/Logo.png" alt="logo" />
 
 
@@ -51,18 +50,22 @@
         <!-- /page -->
         <div class="page" id="page-about">
             <header class="bp-header cf">
-                <h1 class="bp-header__title">Documentation</h1>
-                <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
+                <h1 class="bp-header__title">About us</h1>
+
                 <p class="info">
-                    "We cannot have peace among men whose hearts find delight in killing any living creature." &mdash; Rachel Carson
+                    TM "DELLAVIE" Coffee is a blend of coffee varieties of the highest quality from Colombia, Brazil, Ethiopia, Malaisia and India.
                 </p>
+                <p class="info">The ides is to create an essential atribute of meeting,as one of the most common circumstances in our life, when we enjoy ceoffe.</p>
+
+                <p class="info">A meeting in all its manifestations is a business-meeting, a romtic moment, a meeting of friends, and dawn as a meeting of days and night...All these moments give us hundreds of oportunities to create little miracles for ourselves, our families and friends;this is always the beginning of changes, the begining of something of nes. A meeting always devides time into "befor" and "after"...</p>
+
             </header>
-            <img class="poster" src="images/6.jpg" alt="img06" />
+            <img class="poster" src="images/cappuccino_cup.png" alt="img06" />
         </div>
         <div class="page" id="page-products">
             <header class="bp-header cf">
-                <h1 class="bp-header__title">Manuals</h1>
-                <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
+                <h1 class="bp-header__title">Products</h1>
+
                 <p class="info">
                     "When you adopt a vegan diet we make a connection, you don't go back, it is not a diet, it is a lifestyle." &mdash; Freelee Frugivore
                 </p>
