products pages done

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="pages-nav__item"><a class="link link--page" href="#page-home">Home</a></div>
         <div class="pages-nav__item"><a class="link link--page" href="#page-store">Store</a></div>
         <div class="pages-nav__item"><a class="link link--page" href="#page-about">About Us</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-exclusif">EXCLUSIVF</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-special">SPECIAL</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded" href="#page-original">ORIGINAL</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded exh" href="#page-exclusif">EXCLUSIVF</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded sph" href="#page-special">SPECIAL</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded orh" href="#page-original">ORIGINAL</a></div>
 
         <div class="pages-nav__item pages-nav__item--social">
             <a class="link link link--page link--social link--faded" href="#page-contact"><i class="fa fa-telegram" aria-hidden="true"></i><span class="text-hidden">CONTACT US</span></a>
@@ -87,33 +87,63 @@
 
         <div class="page" id="page-exclusif">
             <header class="bp-header cf">
-                <h1 class="bp-header__title">Where to buy</h1>
-                <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
+                <h1 class="bp-header__title">Exclusif</h1>
+                <p class="bp-header__desc">TM "DELLAVIE" EXCLUSIF is a bend of:</p>
                 <p class="info">
-                    "When people ask me why I don't eat meat or any other animal products, I say, 'Because they are unhealthy and they are the product of a violent and inhumane industry.'" &mdash;
+                    <ul>
+                        <li>Arabica Brazil;</li>
+                        <li>Arabica Colombia Excelso;</li>
+                        <li>Arabica Ethiopia;</li>
+                    </ul>
                 </p>
+                <P class="">
+                    <img class="country" src="images/brazil.svg" alt="Brazil" />
+                    <img class="country" src="images/colombia.svg" alt="Colombia" />
+                    <img class="country" src="images/ethiopia.svg" alt="Ethiopia" />
+
+                </P>
             </header>
-            <img class="poster" src="images/6.jpg" alt="img06" />
+            <img class="poster" src="images/Exclusif.png" alt="img06" />
         </div>
         <div class="page" id="page-special">
             <header class="bp-header cf">
-                <h1 class="bp-header__title">Blog &amp; News</h1>
-                <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
+                <h1 class="bp-header__title sp">SPECIAL</h1>
+                <p class="bp-header__desc">TM "DELLAVIE" SPECIAL is a bend of:</p>
                 <p class="info">
-                    "The question is not, 'Can they reason?' nor, 'Can they talk?' but rather, 'Can they suffer?" &mdash; Jeremy Bentham
+                    <ul>
+                        <li>Arabica Ethiopia;</li>
+                        <li>Arabica Brazil;</li>
+                        <li>Arabica Malaysia;</li>
+                    </ul>
                 </p>
+                <P class="">
+                    <img class="country" src="images/ethiopia.svg" alt="Brazil" />
+                    <img class="country" src="images/brazil.svg" alt="Colombia" />
+                    <img class="country" src="images/malaysia.svg" alt="Ethiopia" />
+
+                </P>
             </header>
-            <img class="poster" src="images/1.jpg" alt="img01" />
+            <img class="poster" src="images/special.png" alt="img01" />
         </div>
         <div class="page" id="page-original">
             <header class="bp-header cf">
-                <h1 class="bp-header__title">Contact</h1>
-                <p class="bp-header__desc">Based on Ilya Kostin's Dribbble shot <a href="https://dribbble.com/shots/2286042-Stacked-navigation">Stacked navigation</a></p>
+                <h1 class="bp-header__title or">ORIGINAL</h1>
+                <p class="bp-header__desc">TM "DELLAVIE" ORIGINAL is a bend of:</p>
                 <p class="info">
-                    "Man is the only animal that can remain on friendly terms with the victims he intends to eat until he eats them." &mdash; Samuel Butler
+                    <ul>
+                        <li>Arabica Ethiopia;</li>
+                        <li>Arabica Colombia Excelso;</li>
+                        <li>Arabica India;</li>
+                    </ul>
                 </p>
+                <P class="">
+                    <img class="country" src="images/ethiopia.svg" alt="Brazil" />
+                    <img class="country" src="images/colombia.svg" alt="Colombia" />
+                    <img class="country" src="images/india.svg" alt="Ethiopia" />
+
+                </P>
             </header>
-            <img class="poster" src="images/4.jpg" alt="img04" />
+            <img class="poster" src="images/original.png" alt="img04" />
         </div>
 
 
