--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DELLAVIE</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <script src="js/modernizr-custom.js"></script>
@@ -18,7 +18,7 @@
         <div class="pages-nav__item"><a class="link link--page" href="#page-home">Home</a></div>
         <div class="pages-nav__item"><a class="link link--page" href="#page-store">Store</a></div>
         <div class="pages-nav__item"><a class="link link--page" href="#page-about">About Us</a></div>
-        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded exh" href="#page-exclusif">EXCLUSIVF</a></div>
+        <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded exh" href="#page-exclusif">EXCLUSIF</a></div>
         <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded sph" href="#page-special">SPECIAL</a></div>
         <div class="pages-nav__item pages-nav__item--small"><a class="link link--page link--faded orh" href="#page-original">ORIGINAL</a></div>
 
