--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     <!-- /pages-stack -->
     <button class="menu-button"><span>Menu</span></button>
     <script src="js/classie.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
