--- a/index.html
+++ b/index.html
@@ -54,58 +54,128 @@
         </div>
         <!-- /page -->
         <div class="page" id="page-store">
+
             <header class="bp-header cf st-header">
-                <h1 class="bp-header__title st-h">Products</h1>
+                <h1 class="bp-header__title st-h">Our Products</h1>
             </header>
+
             <ul class="cd-items cd-container">
-                <li class="cd-item">
+                <li class="cd-item" id="prdct1">
                     <img src="images/item-1.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                    <a href="#prdct1" class="cd-trigger">Quick View</a>
+                    <div class="quick-view-content">
+                        <div class="quick-view-content-wrapper">
+                            <div class="cd-slider-wrapper">
+                                <ul class="cd-slider">
+                                    <li class="selected"><img src="img/item-1.jpg" alt="Product 1"></li>
+                                    <li><img src="images/item-1.jpg" alt="Product 2"></li>
+                                </ul>
+                                <!-- cd-slider -->
+
+                            </div>
+                            <!-- cd-slider-wrapper -->
+
+                            <div class="cd-item-info">
+                                <h2>Produt Title Unique 1</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione. Numquam eveniet quo, ullam itaque expedita impedit. Eveniet, asperiores amet iste repellendus similique reiciendis, maxime laborum praesentium.</p>
+
+                                <ul class="cd-item-action">
+                                    <li>
+                                        <button class="add-to-cart">Add to cart</button>
+                                    </li>
+                                    <li><a href="#">Learn more</a></li>
+                                </ul>
+                                <!-- cd-item-action -->
+                            </div>
+                            <!-- cd-item-info -->
+                        </div>
+                    </div>
                 </li>
                 <!-- cd-item -->
 
-                <li class="cd-item">
-                    <img src="images/item-1.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                <li class="cd-item" id="prdct2">
+                    <img src="images/item-2.jpg" alt="Item Preview">
+                    <a href="#prdct2" class="cd-trigger">Quick View</a>
+
+                    <div class="quick-view-content">
+                        <div class="quick-view-content-wrapper">
+                            <div class="cd-slider-wrapper">
+                                <ul class="cd-slider">
+                                    <li class="selected"><img src="img/item-1.jpg" alt="Product 1"></li>
+                                    <li><img src="images/item-2.jpg" alt="Product 2"></li>
+
+                                </ul>
+                                <!-- cd-slider -->
+
+
+                            </div>
+                            <!-- cd-slider-wrapper -->
+
+                            <div class="cd-item-info">
+                                <h2>Produt Title Unique 2</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione. Numquam eveniet quo, ullam itaque expedita impedit. Eveniet, asperiores amet iste repellendus similique reiciendis, maxime laborum praesentium.</p>
+
+                                <ul class="cd-item-action">
+                                    <li>
+                                        <button class="add-to-cart">Add to cart</button>
+                                    </li>
+                                    <li><a href="#">Learn more</a></li>
+                                </ul>
+                                <!-- cd-item-action -->
+                            </div>
+                            <!-- cd-item-info -->
+                        </div>
+                    </div>
+
+
                 </li>
                 <!-- cd-item -->
 
-                <li class="cd-item">
-                    <img src="images/item-1.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                <li class="cd-item" id="prdct1">
+                    <img src="images/item-3.jpg" alt="Item Preview">
+                    <a href="#prdct3" class="cd-trigger">Quick View</a>
+
+                    <div class="quick-view-content">
+                        <div class="quick-view-content-wrapper">
+                            <div class="cd-slider-wrapper">
+                                <ul class="cd-slider">
+                                    <li class="selected"><img src="images/item-1.jpg" alt="Product 1"></li>
+                                    <li><img src="images/item-3.jpg" alt="Product 2"></li>
+                                </ul>
+                                <!-- cd-slider -->
+
+                            </div>
+                            <!-- cd-slider-wrapper -->
+
+                            <div class="cd-item-info">
+                                <h2>Produt Title Unique 3</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione. Numquam eveniet quo, ullam itaque expedita impedit. Eveniet, asperiores amet iste repellendus similique reiciendis, maxime laborum praesentium.</p>
+
+                                <ul class="cd-item-action">
+                                    <li>
+                                        <button class="add-to-cart">Add to cart</button>
+                                    </li>
+                                    <li><a href="#">Learn more</a></li>
+                                </ul>
+                                <!-- cd-item-action -->
+                            </div>
+                            <!-- cd-item-info -->
+                        </div>
+                    </div>
                 </li>
                 <!-- cd-item -->
             </ul>
 
-            <div class="cd-quick-view">
-                <div class="cd-slider-wrapper">
-                    <ul class="cd-slider">
-                        <li class="selected"><img src="images/item-1.jpg" alt="Product 1"></li>
-                        <li><img src="images/item-2.jpg" alt="Product 2"></li>
-                        <li><img src="images/item-3.jpg" alt="Product 3"></li>
-                    </ul>
-                    <!-- cd-slider -->
-
-                    <!-- cd-slider-navigation -->
-                </div>
-                <!-- cd-slider-wrapper -->
-
-                <div class="cd-item-info">
-                    <h2>Produt Title</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione. Numquam eveniet quo, ullam itaque expedita impedit. Eveniet, asperiores amet iste repellendus similique reiciendis, maxime laborum praesentium.</p>
-
-                    <ul class="cd-item-action">
-                        <li>
-                            <button class="add-to-cart">Add to cart</button>
-                        </li>
-                        <li><a href="#0">Learn more</a></li>
-                    </ul>
-                    <!-- cd-item-action -->
-                </div>
-                <!-- cd-item-info -->
-                <a href="#0" class="cd-close">Close</a>
+            <div id="cd-quick-view" class="cd-quick-view">
+                <a href="javascript:void(0);" class="cd-close">Close</a>
             </div>
             <!-- cd-quick-view -->
+
+            <div id="cd-quick-view-coverlay"></div>
+
+
+
+
 
         </div>
         <div class="page" id="page-about">
