--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                         <div class="quick-view-content-wrapper">
                             <div class="cd-slider-wrapper">
                                 <ul class="cd-slider">
-                                    <li class="selected"><img src="img/item-1.jpg" alt="Product 1"></li>
-                                    <li><img src="images/item-1.jpg" alt="Product 2"></li>
+                                    <li class="selected">
+                                        <img src="images/item-1.jpg" alt="Product 2">
+                                    </li>
                                 </ul>
                                 <!-- cd-slider -->
 
@@ -101,8 +102,9 @@
                         <div class="quick-view-content-wrapper">
                             <div class="cd-slider-wrapper">
                                 <ul class="cd-slider">
-                                    <li class="selected"><img src="img/item-1.jpg" alt="Product 1"></li>
-                                    <li><img src="images/item-2.jpg" alt="Product 2"></li>
+                                    <li class="selected">
+                                        <img src="images/item-2.jpg" alt="Product 2">
+                                    </li>
 
                                 </ul>
                                 <!-- cd-slider -->
@@ -131,7 +133,7 @@
                 </li>
                 <!-- cd-item -->
 
-                <li class="cd-item" id="prdct1">
+                <li class="cd-item" id="prdct3">
                     <img src="images/item-3.jpg" alt="Item Preview">
                     <a href="#prdct3" class="cd-trigger">Quick View</a>
 
@@ -139,8 +141,9 @@
                         <div class="quick-view-content-wrapper">
                             <div class="cd-slider-wrapper">
                                 <ul class="cd-slider">
-                                    <li class="selected"><img src="images/item-1.jpg" alt="Product 1"></li>
-                                    <li><img src="images/item-3.jpg" alt="Product 2"></li>
+                                    <li class="selected">
+                                        <img src="images/item-3.jpg" alt="Product 2">
+                                    </li>
                                 </ul>
                                 <!-- cd-slider -->
 
