working content store

--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
             <ul class="cd-items cd-container">
                 <li class="cd-item">
                     <img src="images/item-1.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                    <a href="#0" class="cd-trigger" id="ex-trig">Quick View</a>
                 </li>
                 <!-- cd-item -->
 
                 <li class="cd-item">
                     <img src="images/item-2.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                    <a href="#0" class="cd-trigger" id="sp-trig">Quick View</a>
                 </li>
                 <!-- cd-item -->
 
                 <li class="cd-item">
                     <img src="images/item-3.jpg" alt="Item Preview">
-                    <a href="#0" class="cd-trigger">Quick View</a>
+                    <a href="#0" class="cd-trigger" id="or-trig">Quick View</a>
                 </li>
                 <!-- cd-item -->
             </ul>
@@ -80,7 +80,7 @@
             <div class="cd-quick-view">
                 <div class="cd-slider-wrapper">
                     <ul class="cd-slider">
-                        <li class="selected"><img src="images/item-1.jpg" alt="Product 1"></li>
+                        <li><img src="images/item-1.jpg" alt="Product 1"></li>
                         <li><img src="images/item-2.jpg" alt="Product 2"></li>
                         <li><img src="images/item-3.jpg" alt="Product 3"></li>
                     </ul>
@@ -90,15 +90,63 @@
                 </div>
                 <!-- cd-slider-wrapper -->
 
-                <div class="cd-item-info">
-                    <h2>Produt Title</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione. Numquam eveniet quo, ullam itaque expedita impedit. Eveniet, asperiores amet iste repellendus similique reiciendis, maxime laborum praesentium.</p>
+                <div class="cd-item-info" id="ex-info">
+                    <h2>EXCLUSIF</h2>
+                    <p class="bp-header__desc">TM "DELLAVIE" EXCLUSIF is a bend of:</p>
+                    <p class="info">
+                        <ul>
+                            <li>Arabica Brazil;</li>
+                            <li>Arabica Colombia Excelso;</li>
+                            <li>Arabica Ethiopia;</li>
+                        </ul>
+                    </p>
 
                     <ul class="cd-item-action">
                         <li>
                             <button class="add-to-cart">Add to cart</button>
                         </li>
-                        <li><a href="#0">Learn more</a></li>
+
+                    </ul>
+                    <!-- cd-item-action -->
+                </div>
+                <!-- cd-item-info -->
+
+                <div class="cd-item-info" id="sp-info">
+                    <h2>SPECIAL</h2>
+                    <p class="bp-header__desc">TM "DELLAVIE" SPECIAL is a bend of:</p>
+                    <p class="info">
+                        <ul>
+                            <li>Arabica Ethiopia;</li>
+                            <li>Arabica Brazil;</li>
+                            <li>Arabica Malaysia;</li>
+                        </ul>
+                    </p>
+
+                    <ul class="cd-item-action">
+                        <li>
+                            <button class="add-to-cart">Add to cart</button>
+                        </li>
+
+                    </ul>
+                    <!-- cd-item-action -->
+                </div>
+                <!-- cd-item-info -->
+
+                <div class="cd-item-info" id="or-info">
+                    <h2>ORIGINAL</h2>
+                    <p class="bp-header__desc">TM "DELLAVIE" ORIGINAL is a bend of:</p>
+                    <p class="info">
+                        <ul>
+                            <li>Arabica Ethiopia;</li>
+                            <li>Arabica Colombia Excelso;</li>
+                            <li>Arabica India;</li>
+                        </ul>
+                    </p>
+
+                    <ul class="cd-item-action">
+                        <li>
+                            <button class="add-to-cart">Add to cart</button>
+                        </li>
                     </ul>
                     <!-- cd-item-action -->
                 </div>
