preparing for the integration of the card feature

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                     <ul class="cd-item-action">
                         <li>
-                            <button class="add-to-cart">Add to cart</button>
+                            <button class="add-to-cart cd-add-to-cart" data-price="50">Add to cart 50$</button>
                         </li>
 
                     </ul>
@@ -124,7 +124,7 @@
 
                     <ul class="cd-item-action">
                         <li>
-                            <button class="add-to-cart">Add to cart</button>
+                            <button class="add-to-cart cd-add-to-cart" data-price="47">Add to cart 47$</button>
                         </li>
 
                     </ul>
@@ -135,17 +135,17 @@
                 <div class="cd-item-info" id="or-info">
                     <h2>ORIGINAL</h2>
                     <p class="bp-header__desc">TM "DELLAVIE" ORIGINAL is a bend of:</p>
-                    <p class="info">
+                    <div class="info">
                         <ul>
                             <li>Arabica Ethiopia;</li>
                             <li>Arabica Colombia Excelso;</li>
                             <li>Arabica India;</li>
                         </ul>
-                    </p>
+                    </div>
 
                     <ul class="cd-item-action">
                         <li>
-                            <button class="add-to-cart">Add to cart</button>
+                            <button class="add-to-cart cd-add-to-cart" data-price="49">Add to cart 49$</button>
                         </li>
                     </ul>
                     <!-- cd-item-action -->
