--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" type="text/css" href="css/contact.css" />
     <link rel="stylesheet" type="text/css" href="css/store.css" />
+    <link rel="stylesheet" type="text/css" href="css/card.css" />
 
     <script src="js/modernizr-custom.js"></script>
 </head>
@@ -102,7 +103,7 @@
                     </p>
 
                     <ul class="cd-item-action">
-                        <li>
+                        <li class="main">
                             <button class="add-to-cart cd-add-to-cart" data-price="50">Add to cart 50$</button>
                         </li>
 
@@ -123,7 +124,7 @@
                     </p>
 
                     <ul class="cd-item-action">
-                        <li>
+                        <li class="main">
                             <button class="add-to-cart cd-add-to-cart" data-price="47">Add to cart 47$</button>
                         </li>
 
@@ -144,7 +145,7 @@
                     </div>
 
                     <ul class="cd-item-action">
-                        <li>
+                        <li class="main">
                             <button class="add-to-cart cd-add-to-cart" data-price="49">Add to cart 49$</button>
                         </li>
                     </ul>
@@ -154,6 +155,37 @@
                 <a href="#0" class="cd-close">Close</a>
             </div>
             <!-- cd-quick-view -->
+
+            <div class="cd-cart-container empty">
+                <a href="#0" class="cd-cart-trigger">
+		Cart
+		<ul class="count"> <!-- cart items count -->
+			<li>0</li>
+			<li>0</li>
+		</ul> <!-- .count -->
+	</a>
+
+                <div class="cd-cart">
+                    <div class="wrapper">
+                        <header>
+                            <h2>Cart</h2>
+                            <span class="undo">Item removed. <a href="#0">Undo</a></span>
+                        </header>
+
+                        <div class="body">
+                            <ul>
+                                <!-- products added to the cart will be inserted here using JavaScript -->
+                            </ul>
+                        </div>
+
+                        <footer>
+                            <a href="#0" class="checkout btn"><em>Checkout - $<span>0</span></em></a>
+                        </footer>
+                    </div>
+                </div>
+                <!-- .cd-cart -->
+            </div>
+            <!-- cd-cart-container -->
 
         </div>
         <div class="page" id="page-about">
