working add to cart feature

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                     <ul class="cd-item-action">
                         <li class="main">
-                            <button class="add-to-cart cd-add-to-cart" data-price="50">Add to cart 50$</button>
+                            <button class="add-to-cart cd-add-to-cart" data-name='TM "DELLAVIE" EXCLUSIF' data-price="50" data-url="images/item-1.jpg" alt="Product 1">Add to cart 50$</button>
                         </li>
 
                     </ul>
@@ -125,7 +125,7 @@
 
                     <ul class="cd-item-action">
                         <li class="main">
-                            <button class="add-to-cart cd-add-to-cart" data-price="47">Add to cart 47$</button>
+                            <button class="add-to-cart cd-add-to-cart" data-name='TM "DELLAVIE" SPECIAL' data-price="47" data-url="images/item-2.jpg">Add to cart 47$</button>
                         </li>
 
                     </ul>
@@ -136,17 +136,17 @@
                 <div class="cd-item-info" id="or-info">
                     <h2>ORIGINAL</h2>
                     <p class="bp-header__desc">TM "DELLAVIE" ORIGINAL is a bend of:</p>
-                    <div class="info">
+                    <p class="info">
                         <ul>
                             <li>Arabica Ethiopia;</li>
-                            <li>Arabica Colombia Excelso;</li>
+                            <li>Arabica Colombia;</li>
                             <li>Arabica India;</li>
                         </ul>
-                    </div>
+                    </p>
 
                     <ul class="cd-item-action">
                         <li class="main">
-                            <button class="add-to-cart cd-add-to-cart" data-price="49">Add to cart 49$</button>
+                            <button class="add-to-cart cd-add-to-cart" data-name='TM "DELLAVIE" SPECIAL' data-price="49" data-url="images/item-3.jpg">Add to cart 49$</button>
                         </li>
                     </ul>
                     <!-- cd-item-action -->
